@@ -169,6 +169,7 @@ CREATE TABLE IF NOT EXISTS mailbox (
     enableinternal TINYINT(1) NOT NULL DEFAULT 1,
     enabledoveadm TINYINT(1) NOT NULL DEFAULT 1,
     `enablelib-storage` TINYINT(1) NOT NULL DEFAULT 1,
+    enablelmtp TINYINT(1) NOT NULL DEFAULT 1,
     lastlogindate DATETIME NOT NULL DEFAULT '0000-00-00 00:00:00',
     lastloginipv4 INT(4) UNSIGNED NOT NULL DEFAULT 0,
     lastloginprotocol CHAR(255) NOT NULL DEFAULT '',
